package com.puc.moedaestudantil.model.enums;

public enum StatusResgate {
    PENDENTE,
    UTILIZADO
}
