package com.puc.moedaestudantil.model.enums;

public enum TipoTransacao {
    ENVIO,
    RESGATE
}
